--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@
     max-width: 530px;
     margin: auto;
     height: 100%;
+    padding: 0 15px;
 }
 
 .main-pci {
@@ -38,6 +39,7 @@
 
 .title-main {
     margin-bottom: 70px;
+    margin-right: -15px;
 }
 
 .title-main .k-smal-head {
@@ -50,8 +52,8 @@
     content: '';
     width: 180px;
     height: 202px;
-    left: 39px;
-    top: 50px;
+    left: 40px;
+    top: 52px;
     background: url(../img/more-k-small.png) no-repeat center center;
 }
 
@@ -123,6 +125,7 @@
     color: #646464;
     font-weight: 300;
     margin-bottom: 50px;
+    
 
 }
 
